# Curve3D

./: CMakeLists.txt  README.md
lib/: circle.cpp  circle.hpp  curv_lb.hpp  curve.hpp  ellipses.cpp  ellipses.hpp  helix.cpp  helix.hpp
src/: main.cpp
